# AstraEngineV1

./: .gitignore  LICENSE  README.md  docker-compose.yml  makefile
backend/: .env.example  Dockerfile
backend/alebamic/: env.py
backend/app/: _init_.py  main.py  pyproject.toml
backend/app/api/: deps.py
backend/app/api/v1/: _init_.py  health.py  router.py
backend/app/bootstrap/: _init_.py  application.py  database.py  health.py  lifespan.py  logging.py  middleware.py  routes.py
backend/app/common/models/: base_model.py
backend/app/common/repositories/: base_repository.py
backend/app/common/schemas/: base.py
backend/app/common/services/: base_service.py
backend/app/core/: _init_.py  config.py  constants.py  logging.py
backend/app/core/settings/: ai.py  app.py  base.py  database.py  logging.py  redis.py  security.py
backend/app/database/: base.py  health.py  session.py
backend/app/exceptions/: handlers.py
backend/app/middleware/: request_id.py  security_headers.py
backend/app/models/: _init_.py  audit_log.py  base.py  mixins.py  permission.py  role.py  role_permission.py  user.py
backend/app/repositories/: _init_.py  base_repository.py  permission_repository.py  role_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: _init_.py  auth.py  common.py  permission.py  session.py  token.py  user.py
backend/app/security/: _init_.py  dependencies.py  jwt.py  password.py  permissions.py  token.py
backend/app/services/: base_service.py
backend/app/utils/: responses.py
backend/requirements/: base.txt  development.txt
(+1 files in other folders)
