[project]
name = "astra-intelligence-engine"
version = "0.1.0"
description = "ASTRA Intelligence Engine Backend"
readme = "../README.md"
requires-python = ">=3.12"
authors = [
    { name = "Brian Andati" }
]
license = { text = "Proprietary" }

dependencies = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501"
]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "app/tests"
]

asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "app"
]

[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"